--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -6,6 +6,8 @@
     --color-body:#918ca4;
 }
 
+/*Typographiy*/
+
 html{
     font-size: 62.5%;
 }
@@ -38,6 +40,11 @@ p{
     margin-top: 0;
 }
 
+/*Link*/
+
+
+
+
 @media screen and (min-width:1024px){
     body{
         font-size: 1.8rem;
@@ -51,6 +58,30 @@ p{
     h3{
         font-size: 2.4rem;
     }
+    a{
+        text-decoration: none;
+    }
+    .link-arrow{
+        color: var(--color-accent);
+        text-transform: uppercase;
+        font-size: 2rem;
+        font-weight: bold;
+    }
+    .link-arrow::after{
+        content: "-->";
+        margin-left: 5px;
+        transition: margin 0.15s;
+    }
+    .link-arrow:hover::after{
+        margin-left: 10px;
+    }
+}
+
+@media screen and (min-width:1024px){
+    .link-arrow{
+        font-size: 1.5rem;
+    }
+    
 }
 
 
