--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -6,6 +6,10 @@
     --color-body:#918ca4;
 }
 
+*,*::after,*::before{
+    box-sizing: border-box;
+}
+
 /*Typographiy*/
 
 html{
@@ -167,6 +171,126 @@ p{
     justify-content: center;
     align-items: center;
 }
+
+
+/* Button */
+
+.button{
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    white-space: nowrap;
+    padding: 1rem 0;
+}
+
+.button--primary{
+    background: var(--color-primary);
+    color: #fff;
+}
+
+
+/*
+.button--primary{
+    width: 400px;
+    height: 60px;
+    border: 2px solid var(--color-headings);
+    border-radius: 15%/100%;
+    background: none;
+    color: var(--color-headings);
+    font-weight: 700;
+}*/
+
+.button--primary:hover{
+    background: #3a8ffd;
+}
+
+/*
+.button--primary:hover{
+    background: var(--color-headings);
+    color: #fff;
+}
+*/
+
+
+.button--secondary{
+    background: var(--color-secondary);
+    color: #fff;
+}
+
+/*
+.button--secondary{
+    width: 320px;
+    height: 70px;
+    border: 0;
+    border-radius: 15%/100%;
+    background: var(--color-secondary);
+    color:#fff ;
+    font-weight: 700;
+}*/
+
+
+.button--secondary:hover{
+    background: #00c8eb;
+}
+/*
+.button--secondary:hover{
+    background: #07c7e9;
+}*/
+
+.button--accent{
+    background: var(--color-accent);
+    color: #fff;
+}
+
+/*
+.button--accent{
+    width: 180px;
+    height: 60px;
+    color: #fff;
+    border: 0;
+    border-radius: 30%/100%;
+    background: var(--color-accent);
+    font-weight: 700;
+}*/
+
+.button--accent:hover{
+    background: #ec3000;
+}
+
+/*
+.button--accent:hover{
+    background: hsl(12, 100%, 47%);
+}*/
+
+
+.button--block{
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width:1024px) {
+  .button{
+    font-size: 1.5rem;
+  }  
+}
+
+.button--outline{
+    background: #fff;
+    color: var(--color-headings);
+    border: 2px solid var(--color-headings);
+}
+
+.button--outline:hover{
+    background: var(--color-headings);
+    color: #fff;
+}
+
+
 
 
 
