--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -4,6 +4,8 @@
     --color-accent:#ff3400;
     --color-headings:#1b0760;
     --color-body:#918ca4;
+    --color-border:#ccc;
+    --border-radius:30px;
 }
 
 *,*::after,*::before{
@@ -185,7 +187,7 @@ p{
     text-transform: uppercase;
     text-align: center;
     white-space: nowrap;
-    padding: 1rem 0;
+    margin: 1rem 0;
 }
 
 .button--primary{
@@ -262,10 +264,7 @@ p{
     background: #ec3000;
 }
 
-/*
-.button--accent:hover{
-    background: hsl(12, 100%, 47%);
-}*/
+
 
 
 .button--block{
@@ -291,6 +290,46 @@ p{
 }
 
 
+.input{
+    padding: 1.5rem  3.5rem;
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    outline: 0;
+    color: var(--color-headings);
+    font-size: 2rem;
+}
+
+::placeholder{
+    color:#cdcbd7
+}
+
+.input-group{
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    display: flex;
+    
+}
+
+.input-group .input{
+    border: 0;
+    flex-grow: 1;
+    margin: 1.5rem 1rem;
+}
+
+.input-group .button{
+    margin: 4px;
+}
+
+@media screen and(min-width:1024px) {
+    .input{
+        font-size: 1.5rem;
+    }
+}
+
+
+.button, .input{
+    overflow: visible;
+}
 
 
 
