--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -165,6 +165,10 @@ p{
     fill: var(--color-primary);
 }
 
+.icon--secondary{
+    fill: var(--color-secondary);
+}
+
 .icon-container{
     background: #f3f9fa;
     width: 64px;
@@ -421,7 +425,23 @@ p{
     }
 }
 
+/* Media */
 
+.media {
+    display: flex;
+}
+
+.media__title{
+    margin-top: 0;
+}
+
+.media__body{
+    margin: 0 2rem;
+}
+
+.media__image{
+    margin-top: 1rem;
+}
 
 
 
