--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -162,12 +162,21 @@ p{
     height: 40px;
 }
 
+.icon--small{
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary{
     fill: var(--color-primary);
 }
 
 .icon--secondary{
     fill: var(--color-secondary);
+}
+
+.icon--white{
+    fill: #fff;
 }
 
 .icon-container{
@@ -180,7 +189,9 @@ p{
     align-items: center;
 }
 
-
+.icon-container--accent{
+    background: var(--color-accent);
+}
 /* Button */
 
 .button{
@@ -509,6 +520,49 @@ p{
         grid-template-columns: repeat(3,1fr);
     }
 }
+
+/* testimonials */
+
+.testimonial{
+    padding: 3rem;
+}
+
+.testimonial__image{
+    position: relative;
+}
+
+.testimonial__image > img{
+    width: 100%;
+}
+
+.testimonial__image > .icon-container{
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width:768px) {
+    .testimonial .quote,
+    .testimonial .quote__author{
+        font-size: 2.4rem;
+    }
+    .testimonial .quote{
+        margin-left: 6rem;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
