--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -49,7 +49,9 @@ p{
 
 /*Link*/
 
-
+a{
+    text-decoration: none;
+}
 
 
 @media screen and (min-width:1024px){
@@ -281,7 +283,10 @@ p{
     background: #ec3000;
 }
 
-
+.button--stretched{
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
 
 
 .button--block{
@@ -551,12 +556,50 @@ p{
     }
 }
 
+/* Callouts */
+.callout{
+    padding: 4rem;
+    border-radius: 5px;
+    margin: 3rem;
+}
 
 
+.callout--primary{
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.callout__heading{
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.callout .button{
+    justify-self: center;
+    align-self: center;
+}
+
+.callout__content{
+    text-align: center;
+}
 
 
+@media screen and (min-width:768px) {
+    .callout .grid--1x2{
+        grid-template-columns: 1fr auto;
+    }
+    
+    
+    .callout__content{
+        text-align: left;
+    }
 
-
+    .callout .button{
+        justify-self: start;
+        margin: 0 2rem;
+    }
+}
 
 
 
