--- a/HTML&CSSPart3/CSS/components/plans and card.html
+++ b/HTML&CSSPart3/CSS/components/plans and card.html
@@ -20,3 +20,13 @@
     </div>
   </div>
 </div>
+
+<!-- Card部分-->
+<div style="width: 50%; padding: 4rem">
+  <div class="card card--secondary">
+    <header class="card__header">Card Title</header>
+    <div class="card__body">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, saepe.
+    </div>
+  </div>
+</div>
