--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -633,11 +633,39 @@ a{
     opacity: 1;
 }
 
+/* Block */
+
+.block{
+    --padding-vertical:6rem;
+    padding: var(--padding-vertical) 2rem;
+}
+
+.block__header{
+    text-align: center;
+}
+
+.block__heading{
+    margin-top: 0;
+}
+
+.block--dark{
+    background: #000;
+    color: #7b858b;
+}
+
+.block--dark .block__heading{
+    color: #fff;
+}
+
+.block--skewed-left{
+    padding-bottom:calc(var(--padding-vertical)+4rem);
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
 
 
-
-
-
-
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 
