--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -208,6 +208,14 @@ a{
     text-align: center;
     white-space: nowrap;
     margin: 1rem 0;
+    outline: 0;
+}
+
+.button .icon{
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
 }
 
 .button--primary{
@@ -336,7 +344,7 @@ a{
 .input-group .input{
     border: 0;
     flex-grow: 1;
-    margin: 1.5rem 1rem;
+    margin: 1.5rem 2rem;
 }
 
 .input-group .button{
@@ -765,7 +773,31 @@ a{
 }
 
 
+/* Domain Block */
 
+.block-domain .input-group{
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670px;
+}
+
+.block-domain__prices{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width:768px) {
+    .block-domain__prices{
+        grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+    }
+}
 
 
 
