Define Showcase Block.

--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -14,6 +14,10 @@
 }
 
 /*Typographiy*/
+::selection{
+    background: var(--color-primary);
+    color: #fff;
+}
 
 html{
     font-size: 62.5%;
@@ -42,6 +46,7 @@ h2{
 
 h3{
     font-size: 3rem;
+    font-weight: 500;
 }
 
 p{
@@ -136,7 +141,7 @@ a{
 .list{
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
+    
 }
 
 .list--inline .list__item{
@@ -147,6 +152,7 @@ a{
 .list--tick{
     list-style-image:url(../images/tick.svg) ;
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item{
@@ -466,10 +472,12 @@ a{
 
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title{
     margin-top: 0;
+    color: #fff;
 }
 
 .media__body{
@@ -679,7 +687,12 @@ a{
 
 .block--skewed-left{
     padding-bottom:calc(var(--padding-vertical)+4rem);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+}
+
+.block--skewed-right{
+    padding-bottom:calc(var(--padding-vertical)+4rem);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
 }
 
 
@@ -757,9 +770,7 @@ a{
 
 /* Hero */
 
-.hero{
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-}
+
 
 .hero__tagline{
     font-size: 2rem;
@@ -853,5 +864,52 @@ a{
 .plan{
     transition: transform 0.2s ease-out;
 }
+
+/* Features */
+.feature_heading{
+    margin: 1rem 0;
+}
+
+.featrue:first-of-type{
+    margin-top: 6rem;
+}
+
+.feature{
+    gap: 4rem 2rem;
+    margin: 12rem 0;
+}
+
+.feature__image{
+    width: 100%;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(even) .feature__content{
+        order: 2;
+    }
+}
+
+/* Showcase Block*/
+.block-showcase__image > img{
+    width: 100%;
+}
+
+
+
+@media screen and (min-width:768px) {
+    .block-showcase__image{
+        justify-self: end;
+    }
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
+    }
+    .block-showcase .grid{
+        grid-template-columns: repeat(2,50%);
+    }
+}
+
+
+
 
 
