Define Testimonials Block.

--- a/HTML&CSSPart3/CSS/styles.css
+++ b/HTML&CSSPart3/CSS/styles.css
@@ -477,6 +477,9 @@ a{
 
 .media__title{
     margin-top: 0;
+}
+
+.media__title1{
     color: #fff;
 }
 
@@ -670,6 +673,7 @@ a{
 
 .block__header{
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .block__heading{
