--- a/HTMLCSSPart3/CSS/styles.css
+++ b/HTMLCSSPart3/CSS/styles.css
@@ -438,7 +438,7 @@ a{
 
 
 .plan--popular .card__header::before{
-    content: url(/HTML&CSSPart3/images/popular.svg);
+    content: url(/HTMLCSSPart3/images/popular.svg);
     width: 40px;
     display: inline-block;
     position: absolute;
