--- a/HTMLCSSPart3/CSS/styles.css
+++ b/HTMLCSSPart3/CSS/styles.css
@@ -1,3 +1,8 @@
+@import './NormalizeCSS.css';
+
+
+
+
 :root{
     --color-primary:#2584ff; 
     --color-secondary:#00d9ff;
@@ -141,7 +146,6 @@ a{
 .list{
     list-style: none;
     padding-left: 0;
-    
 }
 
 .list--inline .list__item{
@@ -976,6 +980,9 @@ a{
 
     .footer .collapsible__chevron{
         display: none;
+    }
+    .collapsible--expanded .collapsible__chevron{
+        transition: none;
     }
     .footer .collapsible__content{
         opacity: 1;
